Favorite drinks added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,30 @@
                 </article>
             </div>
         </section>
+        <section class="main--favorite-section">
+            <div class="main--favorite-tittle-container">
+                <h2>Get your favorites fot free</h2>
+            </div>
+            <div class="main--favorite-options-container">
+                <div class="main--favorite-options-button">
+                    <button>25</button>
+                    <button>50</button>
+                    <button>100</button>
+                    <button>150</button>
+                    <button>200</button>
+                    <button>400</button>
+                </div>
+                <div class="main--favorite-display-container">
+                    <article>
+                        <div class="main--favorite-display-img"><img src="./img/025.webp" alt="drink"></div>
+                        <div class="main--favorite-display-info">
+                            <h6>Customize your drink</h6>
+                            <p>Make your drink just right with an extra espresso shot, dairy substitute or a dash of your favorite syrup.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
