3 new pictures and the endless section finished

--- a/index.html
+++ b/index.html
@@ -81,6 +81,33 @@
                 </div>
             </div>
         </section>
+        <section class="main--endless-section">
+            <div class="main--endless-tittle-container">
+                <h2>Endless Extras</h2>
+                <p>Joining Starbucks® Rewards means unlocking access to exclusive benefits. Say hello to easy ordering, tasty Rewards and—yes, free coffee.</p>
+            </div>
+            <div class="main--endless-articles-container">
+                <article>
+                    <button><img src="./img/endless-img1.webp" alt=""></button>
+                    <h5>Fun freebies</h5>
+                    <p>not only can you earn free coffee, look forward to birthday treat plus coffee and tea refills.</p>
+                    <a href="#">Learn more</a>
+                </article>
+                <article>
+                    <button><img src="./img/endless-img2.webp" alt=""></button>
+                    <h5>Order & pay ahead</h5>
+                    <p>Enjoy the convenience of in-store, curbside or drive-thru pickup at select stores.</p>
+                    <a href="#">Learn more</a>
+                </article>
+                <article>
+                    <button><img src="./img/endless-img3.webp" alt=""></button>
+                    <h5>Get to free faster
+                    </h5>
+                    <p>Earn Stars even quicker with Bonus Star challenges, Double Star Days and exciting games.</p>
+                    <a href="#">Learn more</a>
+                </article>
+            </div>
+        </section>
     </main>
 </body>
 </html>
