--- a/index.html
+++ b/index.html
@@ -108,6 +108,116 @@
                 </article>
             </div>
         </section>
+        <section class="main--payment_method-section">
+            <div class="main--payment_method-container">
+                <div class="main--payment_method-tittle-container">
+                    <h2>Cash or card, you earn Stars</h2>
+                    <p>No matter how you can earn Stars with your morning coffee. those Stars add up to (really delicious) Rewards.</p>
+                </div>
+                <div class="main--payment_method-articles-container">
+                    <article>
+                        <div class="main--payment_method-articles-tittle">
+                            <h4>1★Star per dollar</h4>
+                            <p>pay as you go</p>
+                        </div>
+                        <div class="main--payment_method-articles-options">
+                            <picture><img src="./img/1A.png" alt=""></picture>
+                            <div>
+                                <h5>Scan and pay separately</h5>
+                                <p>Use cash or credit/debit card at the register.</p>
+                            </div>
+                        </div>
+                        <div class="main--payment_method-articles-options">
+                            <picture><img src="./img/2A.webp" alt=""></picture>
+                            <div>
+                                <h5>Save payment in the app
+                                </h5>
+                                <p>Check-out faster by saving a credit/debit card or PayPal to your account. You’ll be able to order ahead or scan and pay at the register in one step.</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="main--payment_method-articles-tittle">
+                            <h4>2★Stars per dollar</h4>
+                            <p>Add funds in the app</p>
+                        </div>
+                        <div class="main--payment_method-articles-options">
+                            <picture><img src="./img/1B.webp" alt=""></picture>
+                            <div>
+                                <h5>Preload</h5>
+                                <p>To save time and earn Stars twice as fast, add money to your digital Starbucks Card using any payment option. Scan and pay in one step or order ahead in the app.</p>
+                            </div>
+                        </div>
+                        <div class="main--payment_method-articles-options">
+                            <picture><img src="./img/2B.webp" alt=""></picture>
+                            <div>
+                                <h5>Register your gift card</h5>
+                                <p>Then use it to pay through the app. You can even consolidate balances from multiple cards in one place.</p>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="main--payment_method-articles-tittle">
+                            <h4>3★Stars per dollar</h4>
+                            <p>With Starbucks® Rewards Visa® Card</p>
+                        </div>
+                        <div class="main--payment_method-articles-options">
+                            <picture><img src="./img/3A.webp" alt=""></picture>
+                            <div>
+                                <h5>Earn Stars even faster</h5>
+                                <p>Earn Stars on all purchases you make with our credit card opens in new window in and outside of Starbucks.Earn 1 Star per $1 when you digitally preload your Starbucks Card with your Starbucks® Rewards Visa® Card, and earn 2 Stars per $1 when you pay with that preloaded Starbucks Card.</p>
+                            </div>
+                            <div class="main--payment_method-articles-options"></div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="main--star_code-section">
+            <div class="main--star_code-container">
+                <h2>Star Codes</h2>
+                <p>Yesssss. You´ve got Stars in your hand. Enter your code here and well´d add Stars to your account.</p>
+                <div class="main--star_code-input-container">
+                    <label for="input1">* Enter your Star Code</label>
+                    <input id="input1" type="text" >
+                </div>
+                <button>Submit</button>
+            </div>
+        </section>
+        <section class="main--questions-section">
+            <div class="main--questions-tittle">
+                <h2>Questions?</h2>
+                <p>We want to help in any we can. You can ask your barista anytime or we´ve answered the most commonly asked questions <a href="#">right over here</a>.</p>
+            </div>
+        </section>
+        <section class="main--info-section">
+            <div class="main--info-container">
+                <div class="main--info-grid-container">
+                    <p class="first-p">At participating stores. Restrictions apply.</p>
+                    <div>
+                        <h3>EARING STARS</h3>
+                        <p>Stars cannot be earned on purchases of alcohol, Starbucks Cards reloads.</p>
+                        <p>Earn 2 Stars per $1 spent when you scan your member barcode in the app, then pay with cash, credit/debit cards or mobile wallets at participating stores. You can also earn 1 Star per $1 spent when you link a payment method and pay directly through the app.</p>
+                        <p>Earn 2 Stars per $1 spent when you load funds and pay with your digital Starbucks Card in the app. You can also earn 2 Stars per $1 spent when you pay in-person at participating store with yor registered physical Starbucks Cards or scan your member barcode in the app, and then use any physical Starbucks Cards (regardless of whether it is registered) to complete the purchase.</p>
+                    </div>
+                    <div>
+                        <h3>TERMS OF USE</h3>
+                        <P>For full program details visit <a href="#">Starbucks.com/rewards/terms</a>.</P>
+                        <p>* Earn 1 Stars per $ 1 when digitally loading your Starbucks Cards with your Starbucks Rewards Visa® Card: See your Card Rewards Program Agreement for more details.</p>
+                        <p>Starbucks® Rewards benefits are available at participating Starbucks Stores. Not all stores have the ability to honor Rewards at this time. visit the <a href="#">Starbucks Store Locator</a> and Search for location honoring "Redeem Rewards".</p>
+                        <p>Deposit and credit card products provided by JPMorgan Chase Bank, N.A. Member FDIC</p>
+                    </div>
+                    <div>
+                        <h3>BENEFITS</h3>
+                        <p>Free refills available during same in-store visit only. To qualify for the Birthday Reward, you must have made at least one Star-earning transaction.</p>
+                    </div>
+                    <div>
+                        <h3>REDEEMING REWARDS</h3>
+                        <p>Rewards cannot be redeemed for alcoholic beverages or multi-serve items. Not all stores honor tiered Rewards. Select stores redeem 150 Stars for free food or drink items only.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
