--- a/index.html
+++ b/index.html
@@ -219,5 +219,68 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section class="footer--link-section">
+            <div>
+                <h3>About Us</h3>
+                <a href="#">Our Company</a>
+                <a href="#">Our Coffee</a>
+                <a href="#">Stories and News</a>
+                <a href="#">Starbucks Archive</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Costumer Service</a>
+            </div>
+            <div>
+                <h3>Careers</h3>
+                <a href="#">Culture and Values</a>
+                <a href="#">Inclusion, Diversity, and Equity</a>
+                <a href="#">College Achievement Plan</a>
+                <a href="#">Alumni Community</a>
+                <a href="#">U.S. Careers</a>
+                <a href="#">International Careers</a>
+            </div>
+            <div>
+                <h3>
+                    Social Impact</h3>
+                    <a href="#">People</a>
+                    <a href="#">Planet</a>
+                    <a href="#">Environmental and Social Impact Reporting</a>
+            </div>
+            <div>
+                <h3>For Business Partners</h3>
+                <a href="#">Landlord Support Center</a>
+                <a href="#">Suppliers</a>
+                <a href="#">Corporate Gift Sales</a>
+                <a href="#">Office and Foodservice Coffee</a>
+            </div>
+            <div>
+                <h3>Order and Pickup</h3>
+                <a href="#">Order on the App</a>
+                <a href="#">Order on Web</a>
+                <a href="#">Delivery</a>
+                <a href="#">Order and Pickup Options</a>
+                <a href="#">Explore and Find Coffee for Home</a>
+            </div>
+        </section>
+        <section class="footer--references-section">
+            <div class="footer--references-icons-container">
+                <span><i class="fa-brands fa-spotify"></i></span>
+                <span><i class="fa-brands fa-facebook"></i></span>
+                <span><i class="fa-brands fa-pinterest"></i></span>
+                <span><i class="fa-brands fa-instagram-square"></i></span>
+                <span><i class="fa-brands fa-youtube-square"></i></span>
+                <span><i class="fa-brands fa-twitter-square"></i></span>
+            </div>
+            <div class="footer--references-terms_list-container">
+                <ul>
+                    <li><span class="first-span"></span><a href="#">Privacy Policy</a></li>
+                    <li> <span>|</span><a href="#">Terms of Use</a></li>
+                    <li> <span>|</span><a href="#">CA Supply Chain Act</a></li>
+                    <li> <span>|</span><a href="#">Cookie Preferences</a></li>
+                </ul>
+            </div>
+            <p class="footer--references-copyright">© 2022 Starbucks Coffee Company. All rights reserved.</p>
+        </section>
+    </footer>
 </body>
 </html>
