--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section class="nav--responsive-menu">
                 <div class="nav--logo"><img src="./img/Starbucks-Logo.png" alt=""></div>
                 <div class="nav--menu">
-                    <span><i class="fa-solid fa-bars"></i></span>
+                    <span id="menuButton" onclick="showMenu()"><i class="fa-solid fa-bars"></i></span>
                 </div>
             </section>
         </nav>
@@ -282,7 +282,7 @@
         </section>
         <section class="footer--link-section__responsive">
             <div>
-                <button>About Us <span><i class="fa-solid fa-angle-down"></i></span></button>
+                <button onclick="showFooterInfo()">About Us <span><i class="fa-solid fa-angle-down"></i></span></button>
                 <div class="hidden-info--button">
                     <a href="#">Our Company</a>
                     <a href="#">Our Coffee</a>
@@ -293,7 +293,7 @@
                 </div>
             </div>
             <div>
-                <button>Careers <span><i class="fa-solid fa-angle-down"></i></span></button>
+                <button onclick="showFooterInfo()">Careers <span><i class="fa-solid fa-angle-down"></i></span></button>
                 <div class="hidden-info--button">
                     <a href="#">Culture and Values</a>
                     <a href="#">Inclusion, Diversity, and Equity</a>
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div>
-                <button>Social Impact <span><i class="fa-solid fa-angle-down"></i></span></button>
+                <button onclick="showFooterInfo()">Social Impact <span><i class="fa-solid fa-angle-down"></i></span></button>
                 <div class="hidden-info--button">
                     <a href="#">People</a>
                     <a href="#">Planet</a>
@@ -312,7 +312,7 @@
                 </div>
             </div>
             <div>
-                <button>For Business Partners <span><i class="fa-solid fa-angle-down"></i></span></button>
+                <button onclick="showFooterInfo()">For Business Partners <span><i class="fa-solid fa-angle-down"></i></span></button>
                 <div class="hidden-info--button">
                     <a href="#">Landlord Support Center</a>
                     <a href="#">Suppliers</a>
@@ -321,7 +321,7 @@
                 </div>
             </div>
             <div>
-                <button>Order and Pickup <span><i class="fa-solid fa-angle-down"></i></span></button>
+                <button onclick="showFooterInfo()">Order and Pickup <span><i class="fa-solid fa-angle-down"></i></span></button>
                 <div class="hidden-info--button">
                     <a href="#">Order on the App</a>
                     <a href="#">Order on Web</a>
@@ -351,5 +351,6 @@
             <p class="footer--references-copyright">© 2022 Starbucks Coffee Company. All rights reserved.</p>
         </section>
     </footer>
+    <script src="./main.js"></script>
 </body>
 </html>
