--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>StarBucks</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./responsive/display-X850px.css">
+    <link rel="stylesheet" href="./responsive/display-X645px.css">
+
     <script src="https://kit.fontawesome.com/076a6d24e0.js" crossorigin="anonymous"></script>
 </head>
 <body>
