--- a/index.html
+++ b/index.html
@@ -83,19 +83,18 @@
             </div>
             <div class="main--favorite-options-container">
                 <div class="main--favorite-options-button">
-                    <button>25</button>
-                    <button>50</button>
-                    <button>100</button>
-                    <button>150</button>
-                    <button>200</button>
-                    <button>400</button>
+                    <button onclick="button25()">25</button>
+                    <button onclick="button50()">50</button>
+                    <button onclick="button150()">150</button>
+                    <button onclick="button200()">200</button>
+                    <button onclick="button400()">400</button>
                 </div>
                 <div class="main--favorite-display-container">
                     <article>
-                        <div class="main--favorite-display-img"><img src="./img/025.webp" alt="drink"></div>
+                        <div class="main--favorite-display-img"><img src="./img/025.webp" alt="drink" id="favoriteImg"></div>
                         <div class="main--favorite-display-info">
-                            <h6>Customize your drink</h6>
-                            <p>Make your drink just right with an extra espresso shot, dairy substitute or a dash of your favorite syrup.</p>
+                            <h6 id="favoriteTittle">Customize your drink</h6>
+                            <p id="favoriteInfo">Make your drink just right with an extra espresso shot, dairy substitute or a dash of your favorite syrup.</p>
                         </div>
                     </article>
                 </div>
