Favorite Buttons box-shadow fixed

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="main--favorite-options-container">
                 <div class="main--favorite-options-button">
-                    <button onclick="button25()">25</button>
+                    <button onclick="button25()" class="button25">25</button>
                     <button onclick="button50()">50</button>
                     <button onclick="button150()">150</button>
                     <button onclick="button200()">200</button>
